.archive/matrix/mautrix-linkedin/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-mautrix-linkedin
  namespace: matrix
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: mautrix-linkedin
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: matrix-synapse
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
        - ports:
            - port: "8008"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: postgres-1
            io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: matrix-synapse
      toPorts:
        - ports:
            - port: "8008"
              protocol: TCP
    #- toEntities:
    #    - world
    #  toPorts:
    #    - ports:
    #        - port: "443"
    #          protocol: TCP
    - toFQDNs:
        - matchPattern: "*.linkedin.com"
        - matchPattern: "*.licdn.com"
        - matchPattern: "realtime.www.linkedin.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
